# Unreleased

## 2.2.0

- restrict optimize_waypoints parameter to not trigger when options or 'shortest' is used
- Add optimize_waypoints option to directions for simple TSP
- get rid of validators, too maintenance-heavy

## 2.1.0

- fix minor problems, apply PEP lint, add some tests
- Add optimization endpoint

# 2.0.0

- implement all backend changes from moving to openrouteservice v5
- now all parameters are named like their backend equivalents, while keeping the old ors-py parameter names for backwards compatibility, but with deprecation warnings
- validator validates ALL parameters
- added a Client.req property, returning the actual `requests` request

### v1.1.8

- make dependencies more sensible (#32)

### v1.1.7

- fix boundary.country for pelias_search (#30)
- change isochrone defaults (#31)

### v1.1.6

- fix boolean parameters (#28)

### v1.1.0

- fix decoding of 2D polylines
- add support for true booleans

# v1.0

- add Pelias Autocomplete
- add elevation endpoint
- proper parameter validation via Cerberus

## v0.4

- add Pelias geocoding endpoints

## v0.3

- add options object to directions API

## v0.2

- Integrate openpoiservice (#1)
- add dry_run